<resources>
    <string name="app_name">Civitati</string>
    <string name="title_home">Посещения</string>
    <string name="title_dashboard">Нуждающиеся</string>
    <string name="title_notifications">Уведомления</string>
    <string name="btn_submit">Добавить</string>
    <string name="btn_login">Войти</string>
    <string name="btn_reg">Регистрация</string>
    <string name="btn_upd">Обновить</string>
    <string name="btn_upload_photo">Загрузить фото</string>
    <string name="btn_del">Удалить</string>
    <string name="hint_date">Дата</string>
    <string name="info_id">ИД:</string>
    <string name="info_name">Имя:</string>
    <string name="info_help_reason">Почему нуждается:</string>
    <string name="info_address">Адрес:</string>
    <string name="info_telephone">Телефон:</string>
    <string name="info_submit_date">Дата добавления:</string>
    <string name="report_delete_success">Запись успешно удалена</string>
    <string name="report_add_success">Запись успешно добавлена</string>
    <string name="report_change_success">Запись успешно обновлена</string>
    <string name="report_update_success">Запись успешно добавлена</string>
    <string name="report_update_fail">Ошибка при добавлении записи</string>
    <string name="report_delete_fail">Ошибка при удалении записи</string>
    <string name="report_add_fail">Ошибка при добавлении записи</string>
    <string name="report_update_prepare">Подготовка к изменению</string>
    <string name="info_id_needy">ИД нуждающегося:</string>
    <string name="info_help_needy">Информация о помощи:</string>
    <string name="info_needy_help_date">Дата помощи:</string>
    <string name="info_id_needy_help">ИД помощи нуждающемуся:</string>
    <string name="info_notification_date">Дата уведомления:</string>
    <string name="info_needy_name">ФИО:</string>
    <string name="info_login_enter">Логин</string>
    <string name="info_password">Пароль</string>
    <string name="info_logout_option">Выход из системы</string>
    <string name="report_logout">Выходим из системы....</string>
    <string name="report_logout_fail">Ошибка при выходе из системы</string>
    <string name="report_no_internet">Нет Интернет соединения. Проверьте его и попробуйте ещё раз</string>
    <string name="report_login_fail">Ошибка при авторизации</string>
    <string name="report_register_success">Успешная регистрация</string>
    <string name="report_register_fail">Ошибка при регистрации</string>
    <string name="report_date_submit_fail">Некорретный формат даты</string>
    <string name="report_login_needed_in_notifications">Авторизируйтесь, чтобы увидеть уведомления</string>
    <string name="report_no_help_needy_records">Вы еще не оставляли заявки на посещение нуждающихся</string>
    <string name="report_no_notifications">У вас нет уведомлений</string>
</resources>
