<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/helpNeedyUpd"
    >

    <EditText
        android:id="@+id/needyID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="96dp"
        android:layout_marginTop="60dp"
        android:ems="10"
        android:hint="@string/info_id"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/helpInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/info_help_needy"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="@+id/needyID"
        app:layout_constraintTop_toBottomOf="@+id/needyID" />

    <EditText
        android:id="@+id/helpDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginTop="27dp"
        android:ems="10"
        android:hint="@string/info_needy_help_date"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="@+id/helpInfo"
        app:layout_constraintTop_toBottomOf="@+id/helpInfo" />

    <Button
        android:id="@+id/needySubmitBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="36dp"
        android:text="@string/btn_upd"
        android:backgroundTint="@color/colorAccent"
        android:textColor="@color/cardview_light_background"
        app:layout_constraintStart_toStartOf="@+id/helpDate"
        app:layout_constraintTop_toBottomOf="@+id/helpDate" />

    <TextView
        android:id="@+id/needyHelpAddInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="3dp"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/needySubmitBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>